fix(render): disable device auth for cloud deployments
Cloud deployments can't use device pairing since connections come
through a reverse proxy and aren't treated as 'local'. Create a
config file at startup that disables device auth checks.

Password auth is still required - this only skips the device identity
check which requires either local connection or paired device.

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: docker
     plan: standard
     healthCheckPath: /health
-    dockerCommand: node dist/index.js gateway --bind lan --port 8080 --allow-unconfigured
+    dockerCommand: sh -c "mkdir -p /data/.openclaw && echo 'gateway:\n  controlUi:\n    dangerouslyDisableDeviceAuth: true' > /data/.openclaw/config.yaml && node dist/index.js gateway --bind lan --port 8080"
     envVars:
       - key: PORT
         value: "8080"
