feat: add web onboarding UI with shutdown support and auto-open browser
- Add web-based onboarding wizard UI (ui-onboard) with full i18n (en/zh)
- Add "Close Wizard & Stop Server" button on completion screen
- Auto-open browser by default when using --web (use --no-web-open to disable)
- Add OpenCode Zen API provider with free and paid models
- Add SiliconFlow and NVIDIA NIM provider integrations
- Add Chinese README (README_zh.md) with full documentation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dist/config/**",
     "dist/compat/**",
     "dist/control-ui/**",
+    "dist/onboard-ui/**",
     "dist/cron/**",
     "dist/channels/**",
     "dist/daemon/**",
@@ -113,10 +114,13 @@
     "mac:restart": "bash scripts/restart-mac.sh",
     "moltbot:rpc": "node scripts/run-node.mjs agent --mode rpc --json",
     "openclaw": "node scripts/run-node.mjs",
+    "onboard-ui:build": "cd ui-onboard && pnpm build",
+    "onboard-ui:dev": "cd ui-onboard && pnpm dev",
+    "onboard-ui:install": "cd ui-onboard && pnpm install",
     "openclaw:rpc": "node scripts/run-node.mjs agent --mode rpc --json",
     "plugins:sync": "node --import tsx scripts/sync-plugin-versions.ts",
     "postinstall": "node scripts/postinstall.js",
-    "prepack": "pnpm build && pnpm ui:build",
+    "prepack": "pnpm build && pnpm ui:build && pnpm onboard-ui:build",
     "protocol:check": "pnpm protocol:gen && pnpm protocol:gen:swift && git diff --exit-code -- dist/protocol.schema.json apps/macos/Sources/OpenClawProtocol/GatewayModels.swift",
     "protocol:gen": "node --import tsx scripts/protocol-gen.ts",
     "protocol:gen:swift": "node --import tsx scripts/protocol-gen-swift.ts",
